--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 50px;
 }
 .half-width{
     width: 50%;
@@ -18,7 +19,7 @@ section{
 .half-width img{
     width: 100%;
 }
-.hire-button{
+.link-button{
     text-decoration: none;
     background-image: linear-gradient( orange, tomato);
     padding: 10px 40px;
@@ -29,4 +30,9 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.mid-banner{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
