--- a/style.css
+++ b/style.css
@@ -8,13 +8,14 @@ h1{
 .name{
     color: orange;
 }
-section{
+.flex-container{
     display: flex;
     margin-bottom: 50px;
 }
 .half-width{
     width: 50%;
-    padding-left: 5%;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 .half-width img{
     width: 100%;
@@ -35,4 +36,5 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+    background-position-y: bottom;
 }
