--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 h1{
     font-size: 50px;
 }
-.name{
+.orange{
     color: orange;
 }
 .flex-container{
@@ -16,6 +16,30 @@ h1{
     width: 50%;
     padding-left: 2%;
     padding-right: 2%;
+}
+.experience{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    background-position-y: bottom;
+}
+.exp-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 25px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+}
+#web-exp{
+    border-left: 7px solid;
+    border-image: linear-gradient( purple, tomato);
+    border-image-slice: 1;
+}
+#prog-exp{
+    border-left: 7px solid;
+    border-image: linear-gradient( blue, cyan);
+    border-image-slice: 1;
 }
 .half-width img{
     width: 100%;
@@ -37,4 +61,7 @@ h1{
     background-repeat: no-repeat;
     background-position: right;
     background-position-y: bottom;
+}
+footer p{
+    text-align: center;
 }
